--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 				<h1>Welcome to my homepage</h1>
 			</section>
 			<nav>
-				<a href="" class="bg">首页</a>
+				<a href="personal.html" class="bg">首页</a>
 				<a href="">个人简介</a>
 				<a href="">性格爱好</a>
 				<a href="">最新动态</a>
