添加了背景音乐

--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
 </head>
 <body>
 	<div id="wrap">
+		<audio src="Asher Book - Here With You.mp3" autoplay="autoplay"></audio>
 		<header>
 			<section>
-				<h1>Welcome to my homepage</h1>
+				<marquee behavior="" direction="" scrollamount="20"><h1>Welcome to my homepage</h1></marquee>
 			</section>
 			<nav>
-				<a href="personal.html" class="bg">首页</a>
-				<a href="">个人简介</a>
+				<a href="index.html" class="bg">首页</a>
+				<a href="personal.html">个人简介</a>
 				<a href="">性格爱好</a>
 				<a href="">最新动态</a>
 				<a href="">关于我的</a>
